--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       function ProductivityButton (props) {
         return (
           <div className="productivity-button">
-            <button onClick={props.click}>Click Me</button>
+            <button onClick={props.click}>Complete Task(s)</button>
           </div>
         )
       }
