--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 
   <body>
     <script type="text/babel">
+
+    function generateItem (name, costFunction, impactFunction) {
+      return {
+        count: 0,
+        name: name,
+        cost: costFunction,
+        impact: impactFunction,
+      }
+    }
+
       function ProductivityButton (props) {
         return (
           <div className="productivity-button">
@@ -23,6 +33,12 @@
       function Stat (props) {
         return (
           <div className="stats-panel-item">{props.name}: {props.count}</div>
+        )
+      }
+
+      function AdvancedStat (props) {
+        return (
+          <div className="stats-panel-item">{props.item.name}: {props.item.count}</div>
         )
       }
 
@@ -38,10 +54,10 @@
             <Logo />
             <Stat name="Tasks" count={props.tasksCount} />
             <Stat name="Productivity" count={props.productivityCount} />
-            <Stat name="Legal Pads" count={props.legalPadsCount} />
-            <Stat name="Todo Apps" count={props.todoAppsCount} />
-            <Stat name="Python Scripts" count={props.pythonScriptsCount} />
-            <Stat name="Multitasking" count={props.multitaskingCount} />
+            <AdvancedStat item={props.items['Legal Pads']} />
+            <AdvancedStat item={props.items['Todo Apps']} />
+            <AdvancedStat item={props.items['Python Scripts']} />
+            <AdvancedStat item={props.items['Multitasking']} />
             <ProductivityButton click={props.click}/>
           </div>
         )
@@ -49,8 +65,8 @@
 
       function UpgradeItem (props) {
         return (
-          <div className="upgrade-item" onClick={ ()=>props.click() }>
-            <div className="task-text">{ props.text } (Costs { props.cost() } productivity.)</div>
+          <div className="upgrade-item" onClick={ () => props.buyItem(props.item) }>
+            <div className="task-text">{ props.item.name } (Costs { props.item.cost(props.item) } productivity.)</div>
           </div>
         )
       }
@@ -59,11 +75,10 @@
         return (
           <div className="upgrade-panel">
             <img src="backdrop.jpg" style={{width: 100 + "%"}}/>
-
-            <UpgradeItem click={ props.buyLegalPad } text="Buy Legal Pad" cost={ props.costLegalPad } />
-            <UpgradeItem click={ props.buyTodoApp } text="Install Todo App" cost={ props.costTodoApp } />
-            <UpgradeItem click={ props.buyMultitasking } text="Upgrade Multitasking" cost={ props.costMultitasking } />
-            <UpgradeItem click={ props.buyPythonScript } text="Build Python Script" cost={ props.costPythonScript } />
+            <UpgradeItem item={ props.items['Legal Pads'] } buyItem={ props.buyItem } />
+            <UpgradeItem item={ props.items['Todo Apps'] } buyItem={ props.buyItem } />
+            <UpgradeItem item={ props.items['Multitasking'] } buyItem={ props.buyItem } />
+            <UpgradeItem item={ props.items['Python Scripts'] } buyItem={ props.buyItem } />
           </div>
         )
       }
@@ -74,94 +89,71 @@
           this.state = {
             tasksCount: 100,
             productivityCount: 100,
-            legalPadsCount: 0,
-            todoAppsCount: 0,
-            pythonScriptsCount: 0,
-            multitaskingCount: 0,
+            items: {
+              'Legal Pads': generateItem(
+                'Legal Pads',
+                item => item.count + 1,
+                item => {
+                  return { tasks: item.count }
+                },
+              ),
+              'Todo Apps': generateItem(
+                'Todo Apps',
+                item => item.count * 35 + 35,
+                item => {
+                  return { tasks: item.count * 5 }
+                },
+              ),
+              'Multitasking': generateItem(
+                'Multitasking',
+                item => 50 * item.count ** 2 + 100,
+                item => {
+                  return {}
+                },
+              ),
+              'Python Scripts': generateItem(
+                'Python Scripts',
+                item => item.count * 3500 + 1000,
+                item => {
+                  return { productivity: item.count ** 3 }
+                },
+              ),
+            }
           }
           this.tick = this.tick.bind(this)
           this.click = this.click.bind(this)
-
-          /* bind buy functions */
-          this.buyLegalPad = this.buyLegalPad.bind(this)
-          this.buyTodoApp = this.buyTodoApp.bind(this)
-          this.buyMultitasking = this.buyMultitasking.bind(this)
-          this.buyPythonScript = this.buyPythonScript.bind(this)
-          /* bind cost functions */
-          this.costLegalPad = this.costLegalPad.bind(this)
-          this.costTodoApp = this.costTodoApp.bind(this)
-          this.costMultitasking = this.costMultitasking.bind(this)
-          this.costPythonScript = this.costPythonScript.bind(this)
+          this.buyItem = this.buyItem.bind(this)
 
           window.setInterval(this.tick, 1000);
         }
 
-        buyLegalPad () {
-            const cost = this.costLegalPad()
-            if (this.state.productivityCount >= cost) {
-              this.setState((currentState) => {
-                return {
-                  productivityCount: this.state.productivityCount - cost,
-                  legalPadsCount: currentState.legalPadsCount + 1
+        buyItem (item) {
+          const cost = item.cost(item)
+          if (this.state.productivityCount >= cost) {
+            this.setState((currentState) => {
+
+              // clone dictionary
+              let items = {}
+              for (let item in currentState.items) {
+                items[item] = {}
+                for (let itemParameter in currentState.items[item]) {
+                  items[item][itemParameter] = currentState.items[item][itemParameter]
+                  if (item == item.name && itemParameter == 'count') {
+                    items[item][itemParameter] += 1
+                  }
                 }
-              })
-            }
-        }
+              }
 
-        costLegalPad () {
-          return this.state.legalPadsCount + 1
-        }
-
-        buyTodoApp () {
-            const cost = this.costTodoApp()
-            if (this.state.productivityCount >= cost) {
-              this.setState((currentState) => {
-                return {
-                  productivityCount: this.state.productivityCount - cost,
-                  todoAppsCount: currentState.todoAppsCount + 1
-                }
-              })
-            }
-        }
-
-        costTodoApp () {
-          return this.state.todoAppsCount * 35 + 35
-        }
-
-        buyPythonScript () {
-            const cost = this.costPythonScript()
-            if (this.state.productivityCount >= cost) {
-              this.setState((currentState) => {
-                return {
-                  productivityCount: this.state.productivityCount - cost,
-                  pythonScriptsCount: currentState.pythonScriptsCount + 1
-                }
-              })
-            }
-        }
-
-        costPythonScript () {
-          return 3500 * this.state.pythonScriptsCount + 1000
-        }
-
-        buyMultitasking () {
-            const cost = this.costMultitasking()
-            if (this.state.productivityCount >= cost) {
-              this.setState((currentState) => {
-                return {
-                  productivityCount: this.state.productivityCount - cost,
-                  multitaskingCount: currentState.multitaskingCount + 1
-                }
-              })
-            }
-        }
-
-        costMultitasking () {
-          return 50 * this.state.multitaskingCount * this.state.multitaskingCount + 100
+              return {
+                productivityCount: this.state.productivityCount - cost,
+                items: items
+              }
+            })
+          }
         }
 
         click () {
-          const conversion = Math.min(1 + this.state.multitaskingCount ** 2, this.state.tasksCount)
+          const conversion = Math.min(1 + this.state.items["Multitasking"].count ** 2, this.state.tasksCount)
           this.setState((currentState) => {
             return {
               tasksCount: currentState.tasksCount - conversion,
@@ -172,9 +164,21 @@
 
         tick () {
           this.setState((currentState) => {
+            var newTasksCount = currentState.tasksCount + 1
+            var newProductivityCount = currentState.productivityCount
+
+            for (let item in currentState.items) {
+              if (currentState.items[item].impact(currentState.items[item]).tasks) {
+                newTasksCount += currentState.items[item].impact(currentState.items[item]).tasks
+              }
+              if (currentState.items[item].impact(currentState.items[item]).productivity) {
+                newProductivityCount += currentState.items[item].impact(currentState.items[item]).productivity
+              }
+            }
+
             return {
-              tasksCount: currentState.tasksCount + 1 + currentState.legalPadsCount + 5 * currentState.todoAppsCount,
-              productivityCount: currentState.productivityCount + currentState.pythonScriptsCount ** 3
+              tasksCount: newTasksCount,
+              productivityCount: newProductivityCount,
             }
           })
         }
@@ -182,26 +186,16 @@
         render () {
           return (
           <div className="app-container">
-
             <StatsPanel
               tasksCount = {this.state.tasksCount}
               productivityCount = {this.state.productivityCount}
-              legalPadsCount = {this.state.legalPadsCount}
-              todoAppsCount = {this.state.todoAppsCount}
-              pythonScriptsCount = {this.state.pythonScriptsCount}
-              multitaskingCount = {this.state.multitaskingCount}
+              items = {this.state.items}
               click = {this.click}
               />
 
             <UpgradePanel
-              buyLegalPad = {this.buyLegalPad}
-              buyTodoApp = {this.buyTodoApp}
-              buyPythonScript = {this.buyPythonScript}
-              buyMultitasking = {this.buyMultitasking}
-              costLegalPad = {this.costLegalPad}
-              costTodoApp = {this.costTodoApp}
-              costPythonScript = {this.costPythonScript}
-              costMultitasking = {this.costMultitasking}
+              items = {this.state.items}
+              buyItem = { this.buyItem }
             />
           </div>
           )
@@ -213,7 +207,9 @@
         document.getElementById('app')
       )
     </script>
+
     <div id="app"></app>
+
   </body>
 
 </html>
