--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <div id="app"></div>
-    <script src="compiled_app.js"></script>
+    <script src="lib/app.js"></script>
   </body>
 
 </html>
